Edit Cateogy,article and add News

--- a/src/app/components/admin/Question/list-question/list-question.component.html
+++ b/src/app/components/admin/Question/list-question/list-question.component.html
@@ -5,7 +5,7 @@
                 <div class="card-header" style="padding-bottom: 5px !important">
                     <div class="row">
                         <div class="col-6">
-                            <h5 class="pb-2">التصنيفات</h5>
+                            <h5 class="pb-2">الاسئله</h5>
                
                         </div>
 
