--- a/src/app/components/admin/category/insert-category/insert-category.component.html
+++ b/src/app/components/admin/category/insert-category/insert-category.component.html
@@ -1,4 +1,4 @@
-<app-breadcrumb [title]="'إدارة تصنيف الخدمات'" [active_item]="'Form Wizard'"></app-breadcrumb>
+<app-breadcrumb [title]="'إدارة التصنيفات '" [active_item]="'Form Wizard'"></app-breadcrumb>
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
@@ -6,11 +6,11 @@
                 <div class="card-header" style="padding-bottom:5px !important ;">
                     <div *ngIf="update; else elseBlock1">
                         <h5 class="pb-2">تعديل تصنيف موجود</h5>
-                        يمكنك تعديل تصنيف أو أكثر فى قائمة تصنيف الخدمات
+                        يمكنك تعديل تصنيف أو أكثر فى قائمة التصنيفات 
                     </div>
                     <ng-template #elseBlock1>
                         <h5 class="pb-2">إضافة تصنيف جديد</h5>
-                        يمكنك إضافة تصنيف أو أكثر فى قائمة تصنيف الخدمات
+                        يمكنك إضافة تصنيف أو أكثر فى قائمة التصنيفات 
                     </ng-template>
 
                 </div>
@@ -118,7 +118,7 @@
 
                                         <button type="button" onclick="document.getElementById('getFile').click()"
                                             class="changePhoto-btn">
-                                            اضف صورة لتصنيف الخدمات
+                                            اضف صورة للتصنيف
                                         </button>
                                     </div>
                                 </div>
