--- a/src/app/components/admin/category/list-category/list-category.component.html
+++ b/src/app/components/admin/category/list-category/list-category.component.html
@@ -64,15 +64,18 @@
                                             <td class="font-style">{{ item.parentId > 0 ? item.parentCategoryTitle : 'لا يوجد حاليا' }}</td>
                                             <td class="font-style">{{ item.order }}</td>
                             
-                                            <td class="font-style" style=" text-align: left;">
-                                              <button class=" border-0 btn btn-outline-primary  mr-2 d-inline-flex px-2 py-1" *appHasPermission="2"
-                                                (click)="update(item.id)">
-                                                <i class="fa fa-pencil fs-5" aria-hidden="true"></i>
-                                              </button>
-                                              <button class=" border-0 btn btn-outline-danger d-inline-flex px-2 py-1" *appHasPermission="3"
-                                                (click)="delete(item.id)">
-                                                <i class="fa fa-trash fs-5" aria-hidden="true"></i>
-                                              </button>
+                                            <td class="font-style chose">
+                                                <button class="btn pull-right"
+                                                    style="color: rgba(35, 118, 241, 0.667); padding: 7px"
+                                                    (click)="update(item.id)">
+                                                    <i class="fa fa-pencil"></i>
+                                                </button>
+                                                   <button class="btn  pull-right"  style="color: red; padding: 7px"
+                                                   (click)="delete(item.id)">
+                                                    <i class="fa fa-trash"></i>
+                                                       </button>
+                                                
+                                            
                                             </td>
                                           </tr>
                                 </tbody>
