Add User ,nav service

--- a/src/app/components/admin/article/list-article/list-article.component.html
+++ b/src/app/components/admin/article/list-article/list-article.component.html
@@ -36,9 +36,7 @@
                                 </thead>
                                 <tbody>
                                     <tr *ngFor="let view of Article_List;let x = index" class=" ">
-                                        <!-- <td scope="row" class="p-2">{{x+1}}</td> -->
-                                        <!-- <td scope="row" class="p-2">{{views.id}}</td> -->
-                                        <td class="p-2">{{view.id}}</td>
+                                        <td scope="row" class="p-2">{{x+1}}</td>
 
                                         <td class="p-2">{{view.titleAr}}</td>
                                         <td class="p-2">{{view.contentAr}}</td>
