--- a/src/app/components/admin/User/insert-user/insert-user.component.html
+++ b/src/app/components/admin/User/insert-user/insert-user.component.html
@@ -95,7 +95,9 @@
                                 </div>
                                 
                                 <div class="col-12">
-                                    <ng-select #categories formControlName="categoriesIds" [selectOnTab]="true"
+                                    <!-- <ng-select #categories formControlName="categoriesIds" [selectOnTab]="true" -->
+                                        <ng-select #categories formControlName="categoriesIds" *ngIf="insertForm.contains('categoriesIds')" [selectOnTab]="true"
+
                                         [tooltip]="fc.categoriesIds.errors?.required ? 'هذا الحقل مطلوب' : null" class="form-control p-0"
                                         labelForId="1" [multiple]="true" [closeOnSelect]="false" bindValue="id"
                                         [isDisabled]="!(fc.categoriesIds.errors && fc.categoriesIds.touched)"
