--- a/src/app/components/admin/User/list-user/list-user.component.html
+++ b/src/app/components/admin/User/list-user/list-user.component.html
@@ -30,7 +30,7 @@
                                         <th scope="col">اسم المستخدم  بالانجليزيه</th> 
                                         <th scope="col">نوع المستخدم</th> 
 
-                                        <th scope="col"></th>
+                                        <th scope="col">تعديل </th>
 
 
                                     </tr>
@@ -45,13 +45,10 @@
                                         <td class="font-style chose">
                                             <button class="btn pull-right"
                                                 style="color: rgba(35, 118, 241, 0.667); padding: 7px"
-                                                (click)="update(item.id)">
+                                                (click)="update(view.id)">
                                                 <i class="fa fa-pencil"></i>
                                             </button>
-                                               <button class="btn  pull-right"  style="color: red; padding: 7px"
-                                               (click)="delete(item.id)">
-                                                <i class="fa fa-trash"></i>
-                                                   </button>
+                                              
                                             
                                         
                                         </td>
